# 02_Bioinformatica

./: CMakeLists.txt  README.md  main  resultado.txt
src/: hirschberg.cpp  hirschberg.h  main.cpp  substring.cpp  substring_main.cpp
test/: hirschberg_test.cpp  substring_test.cpp
